--- a/DexMasterUI/Components/Layout/DisplayPokemonAbility.razor
+++ b/DexMasterUI/Components/Layout/DisplayPokemonAbility.razor
@@ -3,20 +3,18 @@
     <MudGrid>
         @foreach (Ability ability in _abilities)
         {
-            <MudItem xs="12" sm="6" md="4">
+            <MudItem xs="12" sm="6" md="@(12/_abilities.Count())">
                 <MudCard Elevation="3">
                     <MudCardContent>
                         <MudText Typo="Typo.h5">
-                            @ability.Name
+                            @CommonFunctions.CleanAndCapitalise(ability.Name)
                         </MudText>
-                        <MudText Typo="Typo.body1">
-                            @ability.EffectEntries.Where(a => a.Language.Name == "en").Select(a => a.Effect).FirstOrDefault()
-                        </MudText>
-                        <MudText Typo="Typo.body1">
-                            @ability.FlavorTextEntries.Where(a => a.Language.Name == "en" && a.VersionGroup.Name == VersionGroup).Select(a => a.FlavorText).FirstOrDefault()
-                        </MudText>
-
-                        @if (ability.Name == Pokemon.Abilities.Where(a => a.IsHidden).FirstOrDefault()?.Ability.Name)
+                        <MudTooltip Text="@ability.EffectEntries.Where(a => a.Language.Name == "en").Select(a => a.Effect).FirstOrDefault()">
+                            <MudText Typo="Typo.body1">
+                                @ability.FlavorTextEntries.Where(a => a.Language.Name == "en" && a.VersionGroup.Name == VersionGroup).Select(a => a.FlavorText).FirstOrDefault()
+                            </MudText>
+                        </MudTooltip>
+                        @if (ability.Name == Pokemon.Abilities.FirstOrDefault(a => a.IsHidden)?.Ability.Name)
                         {
                             <MudChip Color="Color.Secondary">Hidden Ability</MudChip>
                         }
