--- a/DexMasterUI/Pages/PokemonPages/PokemonDetails.razor
+++ b/DexMasterUI/Pages/PokemonPages/PokemonDetails.razor
@@ -62,19 +62,29 @@
                 <MudPaper Class="d-flex align-center justify-center mud-width-full py-2">
                     <MudStack AlignItems="AlignItems.Center">
                         <MudText Align="Align.Center" Typo="Typo.caption">Height</MudText>
-                        <MudText Typo="Typo.h6">@Pokemon.PokemonVarieties.FirstOrDefault()?.Height cm</MudText>
-                    </MudStack>
-                </MudPaper>
-            </MudItem>
-            <MudItem lg="2">
-                <MudPaper Class="d-flex align-center justify-center mud-width-full py-2">
-                    <MudStack AlignItems="AlignItems.Center">
+                        <MudText Typo="Typo.h6">
+                            @{
+                                var height = Pokemon.PokemonVarieties.FirstOrDefault()?.Height;
+                            }
+                            @if (height != null)
+                            {
+                                @CommonFunctions.ConvertLengthToString((int)height)
+                            }
+                        </MudText>
                         <MudText Typo="Typo.caption">Weight</MudText>
-                        <MudText Typo="Typo.h6">@Pokemon.PokemonVarieties.FirstOrDefault()?.Weight g</MudText>
+                        <MudText Typo="Typo.h6">
+                            @{
+                                var weight = Pokemon.PokemonVarieties.FirstOrDefault()?.Weight;
+                            }
+                            @if (weight != null)
+                            {
+                                @CommonFunctions.ConvertWeightToString((int)weight)
+                            }
+                        </MudText>
                     </MudStack>
                 </MudPaper>
             </MudItem>
-            <MudItem lg="8">
+            <MudItem lg="10">
                 <DisplayPokemonAbility Pokemon="_pokemon" />
             </MudItem>
             <MudItem lg="12">
