--- a/DexMasterUI/Pages/PokemonPages/PokemonGrid.razor
+++ b/DexMasterUI/Pages/PokemonPages/PokemonGrid.razor
@@ -6,7 +6,7 @@
 
 <MudStack>
     <MudGrid>
-        <MudItem lg="7"></MudItem>
+        <MudItem lg="7" />
         <MudItem lg="5">
             <VersionPickerV2 SelectedVersionChanged="SetPokedex" />
         </MudItem>
